# Custom-Programming-Language

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
includes/: token_factory.h
includes/tokenizer/: lexer.h  patterns.h  token.h  token_handler.h
src/: CMakeCache.txt  cmake_install.cmake  main.cpp
src/tokenizer/: lexer.cpp  lexer.h  mapped_src.cpp  mapped_src.h  patterns.h  token.cpp  token.h  token_factory.cpp  token_factory.h  token_handler.cpp  token_handler.h  tokens_in.txt  tokens_out.txt
src/tokenizer/Tokenizer/: token.cpp  token.h
tests/: lexer_test.cpp
tests/expected/: test3.txt
tests/inputs/: test2.txt  test3.txt
